(failed) Attempt to create another instance of `GitRebaseOption` enum by reflection